Fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,57 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.header-height{
+    height: 10%;
+}
+
+.content-height{
+    height: 90%;
+}
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #046877; 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #86aaaf; 
+}
+
+/* .content::scrollbar-track
+{
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+.content::scrollbar{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+.content::scrollbar-thumb
+{
+	border-radius: 10px;
+	background-image: gradient(
+        linear,
+		left bottom,
+		left top,
+		color-stop(0.44, rgb(122,153,217)),
+		color-stop(0.72, rgb(73,125,189)),
+		color-stop(0.86, rgb(28,58,148))
+    );
+} */
